# polyhedron

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/entries/: entry.rs  level.rs  mod.rs  parser.rs  prefix.rs  time.rs
src/header/: extract.rs  identify.rs  index.rs  info.rs  mc_version.rs  mod.rs  mod_loader.rs
src/issues/: format.rs  groups.rs  issue.rs  mod.rs
src/issues/checks/: checksum_mismatch.rs  corrupted_instance.rs  critical_injection_failure.rs  entrypoint_execution_errors.rs  error_initialization_vm.rs  fabric_internal.rs  flatpak_nvidia.rs  forge_java.rs  forge_missing_dependencies.rs  instance_update_failed.rs  intel_hd.rs  intermediary_mappings.rs  invalid_folder_name.rs  invalid_proxy.rs  java_32_bit.rs  java_option.rs  lexforge_zlibng.rs  linux_openal.rs  locked_jar.rs  lwjgl_2_java_9.rs  macos_ns.rs  missing_indium.rs  missing_libraries.rs  missing_xrandr.rs  mixin_apply_failure.rs  mixin_apply_failure_entry.rs  mixin_apply_failure_stacktraces.rs  mod.rs  modern_java_old_forge.rs  mods_in_stacktrace.rs  mods_in_stacktrace_info.rs  mods_in_stacktrace_namespace.rs  native_transport.rs  new_java_old_forge.rs  no_disk_space.rs  nvidia_linux.rs  old_java_macos.rs  oom.rs  optifine.rs  outdated_launcher.rs  (+4 more)
src/parse/: crash_report.rs  entry.rs  exit_code.rs  exit_code_translations  extra_trace_info.rs  jre_fatal.rs  mod.rs  normalize_mod_name.rs  parser.rs  prefix.rs  section_tree.rs  stacktrace.rs
src/parse/stacktrace/: mod.rs  model.rs  parse.rs  source_info.rs
